Bug 211004 - mailnews.reply_header_locale de-DE not working, patch by Christian Eyrich <ch.ey@gmx.net>, r=smontagu, sr=biesi